# PampaPropellerDS

./: .gitignore  APC_data_handler.py  LICENSE  Makefile  README.md  main.py  propeller_app.py  pyproject.toml  setup.py
app/: main.py  misc.py
data/csv_files/: 10.5x4.5.csv  10.5x6.csv  10x10.csv  10x12WE.csv  10x3.8SF.csv  10x3.csv  10x4.5MRF-RH.csv  10x4.6SF.csv  10x5.8EP.csv  10x6F.csv  10x7-3Blade.csv  10x7.csv  10x7SF.csv  11.5x12.5N.csv  11.5x6.csv  11x10.csv  11x11.csv  11x12E.csv  11x4.6SF.csv  11x4.csv  11x6-4Blade.csv  11x6.csv  11x7.csv  11x7E-3.csv  11x7E.csv  11x8.5E.csv  11x8.csv  11x8E.csv  11x9-4Blade.csv  11x9.csv  12.25x3.75.csv  12.5x10.csv  12.5x11.5.csv  12.5x11.csv  12.5x12.5.csv  12.5x6.csv  12x10.csv  12x10W.csv  12x11.csv  12x12.csv  (+206 more)
database/: database_generator.py
database/csv_files/: 10x10E.csv  10x4.5MR.csv  10x4.5MRF-RH.csv  10x4.6SF.csv  10x4.7SF.csv  10x4.csv  10x5.5MR.csv  10x5.csv  10x5E.csv  10x6-4Blade.csv  10x6.csv  10x6E.csv  10x7E.csv  10x8.csv  10x8E.csv  10x9.csv  11.5x4.csv  11x10E.csv  11x12.csv  11x12W.csv  11x13.csv  11x14.csv  11x3.8SF.csv  11x3.csv  11x4.5EP.csv  11x4.5MR.csv  11x4.6SF.csv  11x4.7SF.csv  11x5.5E.csv  11x5.5MR.csv  11x5.csv  11x7E-3.csv  11x8F.csv  12.5x12.csv  12.5x13.csv  12.5x9.csv  12x10E.csv  12x11.5.csv  12x11N.csv  12x12.5.csv  (+248 more)
database_generator/: database_generator.py
database_handler/: database_builder.py
ppdb/: APC_data_handler.py  DataStore.py  Database.py  database_builder.py  misc.py
ppds/: APC_data_handler.py  database_builder.py  misc.py
ppds/analysis/: data_utils.py  datastore.py  (+1 more)
(+4 files in other folders)
