[tool.poetry]
name = "ppds"
version = "0.1.0"
description = "A propeller dataset for Aerodesign teams."
authors = ["Pampa Aerodesing <aerodesign@ufrgs.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
tinydb = "^4.6.1"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
