[tool.poetry]
name = "ppds"
version = "0.1.0"
description = "A propeller dataset for Aerodesign teams."
authors = ["Pampa Aerodesign <aerodesign@ufrgs.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
tinydb = "^4.6.1"
pandas = "^1.4.1"
requests = "^2.27.1"
lxml = "^4.9.0"
Pint = "^0.19.2"
Pint-Pandas = "^0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
